--- a/gensite/mainapp/templates/mainapp/base.html
+++ b/gensite/mainapp/templates/mainapp/base.html
@@ -8,13 +8,13 @@
 		<meta name="generator" content="Bootply" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-		<link href="{% static "users/css/bootstrap.min.css" %}"  rel="stylesheet">
+		<link href="{% static "mainapp/css/bootstrap.min.css" %}"  rel="stylesheet">
 
 		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link href="{% static "users/css/styles.css" %}" rel="stylesheet">
+		<link href="{% static "mainapp/css/styles.css" %}" rel="stylesheet">
 	</head>
 	<body>
 <header class="navbar navbar-bright navbar-fixed-top" role="banner">
@@ -30,28 +30,7 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-right navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-search"></i></a>
-          <ul class="dropdown-menu" style="padding:12px;">
-            <form class="form-inline">
-              <button type="submit" class="btn btn-default pull-right"><i class="glyphicon glyphicon-search"></i></button><input type="text" class="form-control pull-left" placeholder="Search">
-            </form>
-          </ul>
-        </li>
+        <!--  -->
       </ul>
     </nav>
   </div>
@@ -59,21 +38,11 @@
 
 <div id="masthead">  
   <div class="container">
-    <div class="row">
-      <div class="col-md-7">
-        <h1>Storystrap
+    <div class="row" style="padding:24px; margin-top:31px; margin-bottom:20px;">
+      <div class="col-md-4">
+        <h1 >Gen
           <p class="lead"></p>
         </h1>
-      </div>
-      <div class="col-md-5">
-        <div class="well well-lg"> 
-          <div class="row">
-            <div class="col-sm-12">
-              
-			
-            </div>
-          </div>
-        </div>
       </div>
     </div> 
   </div><!-- /cont -->
@@ -81,7 +50,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="top-spacer"> </div>
+        <div class="top-spacer"></div>
       </div>
     </div> 
   </div><!-- /cont -->
@@ -91,14 +60,10 @@
 
 <div class="container">
   <div class="row">
-    
     <div class="col-md-12"> 
-      
       <div class="panel">
         <div class="panel-body">
-          
-          
-          
+            
           <!--/stories-->
           <div class="row">    
             <br>
@@ -251,7 +216,7 @@
 </footer>
 	<!-- script references -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/scripts.js"></script>
+		<script src="{% static "mainapp/js/bootstrap.min.js" %}"></script>
+		<script src="{% static "mainapp/js/scripts.js" %}"></script>
 	</body>
 </html>
