Improved user management

--- a/gensite/mainapp/templates/mainapp/base.html
+++ b/gensite/mainapp/templates/mainapp/base.html
@@ -51,7 +51,7 @@
         </div>
         <div class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">HOME</a></li>
+            
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -59,7 +59,7 @@
 
 
     <div class="container mtb">
-      <div class="row">
+      <div class="row" style="margin-top:20px; min-height:400px;">
         {% block content %}
           Nothing here
         {% endblock %}
@@ -73,13 +73,6 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
-          <h4>About</h4>
-          <div class="hline-w"></div>
-          <p>
-            Gen is a personalized news recommendation approach based on user’s behavior tracking. It collects news that is relevant to the user according to the news articles that he/she has read in the past.
-          </p>
-        </div>
-        <div class="col-lg-4">
           <h4>Social Links</h4>
           <div class="hline-w"></div>
           <p>
@@ -90,13 +83,13 @@
             <a href="#"><i class="fa fa-tumblr"></i></a>
           </p>
         </div>
-        <div class="col-lg-4">
+
+        <div class="col-lg-4 col-lg-offset-4">
           <h4>Our Bunker</h4>
           <div class="hline-w"></div>
           <p>
-            Some Ave, 987,<br/>
-            23890, New York,<br/>
-            United States.<br/>
+            Kathmandu<br/>
+            Nepal.<br/>
           </p>
         </div>
       </div><! --/row -->
