--- a/gensite/mainapp/templates/mainapp/signup.html
+++ b/gensite/mainapp/templates/mainapp/signup.html
@@ -2,15 +2,14 @@
 
 {% block content %}
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
-			<h1>Fill the following</h1>
+		<div class="col-sm-6">
 			<form class="form-horizontal well" method="post" action="{% url 'signup' %}">
 				{{ form.non_field_errors }}
 				<fieldset>
 					{% csrf_token %}
 
 					{% for field in form %}
-					<div class="control-group">
+					<div class="control-group" style="margin-top:15px;">
 						{{ field.errors }}
 						{{ field.label_tag }}
 						<div class="controls">
@@ -20,7 +19,7 @@
 					{% endfor %}
 
 					<div class="control-group" style="margin-top:10px;">
-						<button class="btn btn-lg btn-primary" type="submit">Signup</button>
+						<button class="btn btn-lg btn-theme" type="submit">Signup</button>
 					</div>
 
 				</fieldset>
