Modified view from home page

--- a/gensite/mainapp/templates/mainapp/index.html
+++ b/gensite/mainapp/templates/mainapp/index.html
@@ -25,7 +25,7 @@
 				</div>
 			{% endif %}
 
-			<form class="form-horizontal well" method="post" action="{% url 'index' %}">
+			<form class="form-horizontal well" method="post" action="{% url 'home' %}">
 				<fieldset>
 					{% csrf_token %}
 
