--- a/gensite/mainapp/templates/mainapp/signup.html
+++ b/gensite/mainapp/templates/mainapp/signup.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 	<div class="row">
+		{% if message %}
+			<div class="row">
+				<div class="well well-lg">
+					{{ message }}
+				</div>
+			</div>
+		{% endif %}
+
 		<div class="col-sm-6">
 			<form class="form-horizontal well" method="post" action="{% url 'signup' %}">
 				{{ form.non_field_errors }}
