--- a/gensite/mainapp/templates/mainapp/base.html
+++ b/gensite/mainapp/templates/mainapp/base.html
@@ -32,7 +32,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     
-    <script src="{% static "js/modernizr.js" %} "></script>
+    <script src="{% static "mainapp/js/modernizr.js" %} "></script>
   </head>
 
   <body>
@@ -47,11 +47,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'home' %}">Gen</a>
+          <a class="navbar-brand" href="{% url 'index' %}">Gen</a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
-            
+            {% if user.is_authenticated %}
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="{% url 'logout' %}">Logout</a></li>
+                </ul>
+              </li>
+            {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -98,13 +105,13 @@
    
     <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- Placed at the end of the document so the pages load faster -->    
+    <script src="{% static "mainapp/js/jquery-2.0.0.min.js" %} "></script>
     <script src="{% static "mainapp/js/bootstrap.min.js" %} "></script>
-  <script src="{% static "mainapp/js/retina-1.1.0.js" %} "></script>
-  <script src="{% static "mainapp/js/jquery.hoverdir.js" %} "></script>
-  <script src="{% static "mainapp/js/jquery.hoverex.min.js" %} "></script>
-  <script src="{% static "mainapp/js/jquery.prettyPhoto.js" %} "></script>
+    <script src="{% static "mainapp/js/retina-1.1.0.js" %} "></script>
+    <script src="{% static "mainapp/js/jquery.hoverdir.js" %} "></script>
+    <script src="{% static "mainapp/js/jquery.hoverex.min.js" %} "></script>
+    <script src="{% static "mainapp/js/jquery.prettyPhoto.js" %} "></script>
     <script src="{% static "mainapp/js/jquery.isotope.min.js" %} "></script>
     <script src="{% static "mainapp/js/custom.js" %} "></script>
 
