--- a/gensite/mainapp/templates/mainapp/index.html
+++ b/gensite/mainapp/templates/mainapp/index.html
@@ -11,42 +11,30 @@
 			        Gen is a personalized news recommendation system. It collects news that is relevant to the user according to the news articles that he/she has read in the past.
 			      </p>
 			  	</section>
-			    <section>
-			      Login to get started
-			    </section>
 			</div>
 		</div>
 		<div class="col-sm-4">
-			{% if message %}
-				<div class="row">
-					<div class="well well-lg">
-						{{message}}
-					</div>
-				</div>
-			{% endif %}
+			<form class="form-horizontal well" method="post" action="{% url 'index' %}">
+				{% if message %}
+						<div class="alert alert-warning">{{ message }}</div>
+				{% endif %}
 
-			<form class="form-horizontal well" method="post" action="{% url 'home' %}">
+				{{ form.non_field_errors }}
 				<fieldset>
 					{% csrf_token %}
 
 					{% for field in form %}
-					<div class="control-group" style="margin-top:15px;">
-						{{ field.errors }}
-						{{ field.label_tag }}
-						<div class="controls">
-							{{ field }}
+						<div class="control-group" style="margin-top:15px;">
+							{{ field.errors }}
+							{{ field.label_tag }}
+							<div class="controls">
+								{{ field }}
+							</div>
 						</div>
-					</div>
 					{% endfor %}
 
-					<p style="margin-top:10px;">
-						<button class="btn btn-md btn-theme" type="submit">Login</button>
-					</p>
-
-					<p>
-						<a class="btn" href="{% url 'signup' %}">Not a member?</a>
-					</p>
-
+					<p style="margin-top:10px;"><button class="btn btn-md btn-theme" type="submit">Login</button></p>
+					<p><a class="btn" href="{% url 'signup' %}">Not a member?</a></p>
 				</fieldset>
 			</form>
 		</div>
