--- a/gensite/mainapp/templates/mainapp/base.html
+++ b/gensite/mainapp/templates/mainapp/base.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
     <title>
@@ -39,7 +37,7 @@
 
     <!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -65,8 +63,8 @@
     </div>
 
 
-    <div class="container mtb">
-      <div class="row" style="margin-top:20px; min-height:400px;">
+    <div class="container-fluid mtb" style="margin-bottom:0px;">
+      <div class="row" style="margin:20px; min-height:400px;">
         {% block content %}
           Nothing here
         {% endblock %}
