--- a/gensite/mainapp/templates/mainapp/home.html
+++ b/gensite/mainapp/templates/mainapp/home.html
@@ -6,7 +6,7 @@
 		{% for post in posts %}
 		<div class="row">
             <div class="col-sm-12">
-              <a href="#"><h4 style="margin-bottom:0px;">{{ post.title }}</h4></a>
+              <h4 style="margin-bottom:0px;"><a href="#">{{ post.title }}</a></h4>
               <div class="row">
                 <div class="col-xs-9">
                   <h5 style="margin-top:0px;"><small class="text-muted">{{ post.created_at|date:"M d" }} | <a href="#" class="text-muted">2 comments</a></small></h5>
