--- a/gensite/templates/admin/base_site.html
+++ b/gensite/templates/admin/base_site.html
@@ -12,5 +12,5 @@
         .ml {margin:0 10px 10px;display:block;float:left}
     </style>
     <a href="{% url 'admin:index' %}" class="ml">{% trans 'Home' %}</a>
-    <a href="{% url 'crawler' %}" class="ml">{% trans 'Crawler' %}</a>
+    <a href="{% url 'crawleradmin' %}" class="ml">{% trans 'Crawler' %}</a>
 {% endblock %}
