--- a/gensite/mainapp/templates/mainapp/home.html
+++ b/gensite/mainapp/templates/mainapp/home.html
@@ -6,11 +6,11 @@
 		{% for post in posts %}
 		<div class="row">
             <div class="col-sm-12">
-              <h4 style="margin-bottom:0px;"><a href="#">{{ post.title }}</a></h4>
+              <h4 style="margin-bottom:0px;"><a href="{{post.url}}">{{ post.title }}</a></h4>
               <div class="row">
                 <div class="col-xs-9">
                   <h5 style="margin-top:0px;"><small class="text-muted">{{ post.created_at|date:"M d" }} | <a href="#" class="text-muted">2 comments</a></small></h5>
-                  <h5><span class="label label-default">{{ post.site.name }}</span></h5>
+                  <h5 style="margin-top:0px;"><span class="label label-default">{{ post.site.name }}</span></h5>
               	</div>
                 <div class="col-xs-3"></div>
               </div>
