--- a/gensite/mainapp/templates/mainapp/base.html
+++ b/gensite/mainapp/templates/mainapp/base.html
@@ -63,12 +63,10 @@
     </div>
 
 
-    <div class="container-fluid mtb" style="margin-bottom:0px;">
-      <div class="row" style="margin:20px; min-height:400px;">
+    <div class="container-fluid mtb" style="margin-left:20px;margin-bottom:20px;">
         {% block content %}
           Nothing here
         {% endblock %}
-      </div>
     </div>
   
   <!-- *****************************************************************************************************************
