--- a/gensite/mainapp/templates/mainapp/home.html
+++ b/gensite/mainapp/templates/mainapp/home.html
@@ -19,7 +19,6 @@
 			</div>
 			{% endfor %}
 		</div>
-
 		<!-- End of content -->
 
 		<!--Sidebar -->
@@ -27,5 +26,22 @@
 			Sidebar
 		</div>
 		<!-- End of sidebar -->
+	</div>
+	<div class="row">
+		<div class="pagination">
+			<span class="step-links">
+				{% if posts.has_previous %}
+					<a href="?page={{ posts.previous_page_number }}">previous</a>
+				{% endif %}
+				
+				<span class="current">
+					Page {{ posts.number }} of {{ posts.paginator.num_pages }}.
+				</span>
+
+				{% if posts.has_next %}
+					<a href="?page={{ posts.next_page_number }}">next</a>
+				{% endif %}
+			</span>
+		</div>
 	</div>
 {% endblock %}
