--- a/gensite/mainapp/templates/mainapp/home.html
+++ b/gensite/mainapp/templates/mainapp/home.html
@@ -3,21 +3,44 @@
 {% block content %}
 	<div class="row">
 		<!-- Content -->
-		<div class="col-sm-8 well well-lg" style="">
+		<div class="col-sm-8 well well-lg">
 			{% for post in posts %}
 			<div class="row">
 	            <div class="col-sm-12">
 	              <h4 style="margin-bottom:0px;"><a href="{{post.url}}">{{ post.title }}</a></h4>
 	              <div class="row">
 	                <div class="col-xs-9">
-	                  <h5 style="margin-top:0px;"><small class="text-muted">{{ post.created_at|date:"M d" }} | <a href="#" class="text-muted">2 comments</a></small></h5>
-	                  <h5 style="margin-top:0px;"><span class="label label-default">{{ post.site.name }}</span></h5>
+	                  <h5 style="margin-top:0px;">
+	                  <small class="text-muted">{{ post.created_at|date:"M d" }} |
+	                  <a href="{{post.site.url}}">{{ post.site.name }} </a> |
+	                  <a href="#" class="text-muted">2 comments</a>
+	                  </small>
+	                  </h5>
 	              	</div>
 	                <div class="col-xs-3"></div>
 	              </div>
 	            </div>
 			</div>
 			{% endfor %}
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="pagination">
+						<span class="step-links">
+							{% if posts.has_previous %}
+								<span class="label label-default"><a href="?page={{ posts.previous_page_number }}">previous</a></span>
+							{% endif %}
+							
+							<!-- <span class="current">
+								Page {{ posts.number }} of {{ posts.paginator.num_pages }}.
+							</span> -->
+
+							{% if posts.has_next %}
+								<span class="label label-default"><a href="?page={{ posts.next_page_number }}">next</a></span>
+							{% endif %}
+						</span>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- End of content -->
 
@@ -26,22 +49,5 @@
 			Sidebar
 		</div>
 		<!-- End of sidebar -->
-	</div>
-	<div class="row">
-		<div class="pagination">
-			<span class="step-links">
-				{% if posts.has_previous %}
-					<a href="?page={{ posts.previous_page_number }}">previous</a>
-				{% endif %}
-				
-				<span class="current">
-					Page {{ posts.number }} of {{ posts.paginator.num_pages }}.
-				</span>
-
-				{% if posts.has_next %}
-					<a href="?page={{ posts.next_page_number }}">next</a>
-				{% endif %}
-			</span>
-		</div>
 	</div>
 {% endblock %}
