--- a/gensite/mainapp/templates/mainapp/home.html
+++ b/gensite/mainapp/templates/mainapp/home.html
@@ -10,14 +10,25 @@
 	              <h4 style="margin-bottom:0px;"><a href="{{post.url}}">{{ post.title }}</a></h4>
 	              <div class="row">
 	                <div class="col-xs-9">
-	                  <h5 style="margin-top:0px;">
-	                  <small class="text-muted">{{ post.created_at|date:"M d" }} |
-	                  <a href="{{post.site.url}}">{{ post.site.name }} </a> |
-	                  <a href="#" class="text-muted">2 comments</a>
-	                  </small>
+	                  <h5 style="margin:0px">
+		                  <small class="text-muted">{{ post.created_at|date:"M d" }} |
+		                  <a href="{{post.site.url}}">{{ post.site.name }} </a> |
+		                  <a href="#" class="text-muted">2 comments</a>
+		                  </small>
 	                  </h5>
 	              	</div>
 	                <div class="col-xs-3"></div>
+	              </div>
+	              <div class="row">
+	              	<div class="col-xs-12">
+	              		<h5 style="margin-top:0px;">
+	              			<small>
+	              				Interesed in this topic:
+	              				<a href="#" class="text-muted" style="font-weight:bold">Yes</a> | 
+	              				<a href="#" class="text-muted" style="font-weight:bold">No</a>
+	              			</small>
+	              		</h5>
+	              	</div>
 	              </div>
 	            </div>
 			</div>
