--- a/gensite/mainapp/templates/mainapp/base.html
+++ b/gensite/mainapp/templates/mainapp/base.html
@@ -110,6 +110,7 @@
     <script src="{% static "mainapp/js/jquery.prettyPhoto.js" %} "></script>
     <script src="{% static "mainapp/js/jquery.isotope.min.js" %} "></script>
     <script src="{% static "mainapp/js/custom.js" %} "></script>
+    <script src="{% static "mainapp/js/script.js" %} "></script>
 
   </body>
 </html>
