--- a/gensite/mainapp/templates/mainapp/base.html
+++ b/gensite/mainapp/templates/mainapp/base.html
@@ -50,8 +50,8 @@
         <div class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
             {% if user.is_authenticated %}
-            <li><a href="">Home</a></li>
-            <li><a href="">Your News</a></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'trending' %}">Trending</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
                 <ul class="dropdown-menu">
