Changed HTML layouts

--- a/gensite/mainapp/templates/mainapp/index.html
+++ b/gensite/mainapp/templates/mainapp/index.html
@@ -5,10 +5,10 @@
 		<div class="col-sm-8">
 			<div class="row">
 				<section>
-			  		<h2>About Gen</h2>
+			  		<h2>Gen</h2>
 			  		<div class="hline"></div>
 			      <p>
-			        Gen is a personalized news recommendation system. It collects news that is relevant to the user according to the news articles that he/she has read in the past.
+			        It is a personalized recommendation system which tracks the user's reading habit about news and provides news relevant to the user.
 			      </p>
 			  	</section>
 			</div>
