--- a/gensite/mainapp/templates/mainapp/base.html
+++ b/gensite/mainapp/templates/mainapp/base.html
@@ -74,7 +74,7 @@
   <!-- *****************************************************************************************************************
    FOOTER
    ***************************************************************************************************************** -->
-   <div id="footerwrap">
+   <div id="footerwrap" style="padding-bottom:30px;">
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
