Adjusted min-height

--- a/gensite/mainapp/templates/mainapp/base.html
+++ b/gensite/mainapp/templates/mainapp/base.html
@@ -65,7 +65,7 @@
     </div>
 
 
-    <div class="container-fluid mtb" style="margin-left:20px;margin-bottom:20px;">
+    <div class="container-fluid mtb" style="margin-left:20px;margin-bottom:20px;min-height:318px;">
         {% block content %}
           Nothing here
         {% endblock %}
